Skip to content

WebVTT subtitle not working properly (at least on Windows)

It seems that a valid .vtt (WebVTT) subtitle file is not displayed at all if it contains timestamps in the format mm:ss.ddd i.e. without the two (or more) ASCII digits representing the "hours" when "hours" is zero.

Given that WebVTT timestamp format mm:ss.ddd (instead of hh:mm:ss.ddd) is a valid a very common format when "hours" is zero, WebVTT subtitle file are quite almost unusable.

System: Windows 7 Home Premium 64 bit VLC: 2.2.1 32 bit

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information