Fix WebVTT subtitles mm:ss.ddd timestamps

Fix #16075

Signed-off-by: Andrea Giudiceandrea <andreaerdna@libero.it>
Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>